feat: support stdlib navigation and fix code corruption during completion
- Add C3SyntheticLibrary and roots provider for standard library indexing and discovery
- Fix compiler/stdlib auto-detection across standard installation paths and platforms
- Support cross-navigation to stdlib declarations (modules, structs, and methods)
- Prevent InsertHandlers from deleting preceding code when completing types after `::`
- Add comprehensive tests for stdlib resolution and scoped completion